log
Wed, Mar 19, 2025  1:33:34 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Mar 23, 2025  1:41:50 PM: 
 tests:  0|5
total_score: 0/70
72c35f2
Sun, Mar 23, 2025  1:47:47 PM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Werror=implicit-function-declaration]
   50 |       pushback(L, elem);
      |       ^~~~~~~~
      |       pushBack
cc1.exe: all warnings being treated as errors
Compilation failed
43ba3da
Sun, Mar 23, 2025  2:41:36 PM: 
 exercises.c | 25 +++++++++++++++++--------
 1 file changed, 17 insertions(+), 8 deletions(-)
 tests:  3|2
total_score: 40/70
e130ed7
Sun, Mar 23, 2025  2:53:47 PM: 
 tests:  3|2
total_score: 40/70
6db0f0c
Sun, Mar 23, 2025  3:04:39 PM: 
 tests:  3|2
total_score: 40/70
7c46802
Sun, Mar 23, 2025  3:15:16 PM: 
 exercises.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:53:15: error: 'k' undeclared (first use in this function)
   53 |       *elem = k;
      |               ^
exercises.c:53:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c311252
Sun, Mar 23, 2025  3:22:54 PM: 
 exercises.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:107:19: error: comparison between pointer and integer [-Werror]
  107 |    while (top(P1) != -1)
      |                   ^~
exercises.c:114:25: error: comparison between pointer and integer [-Werror]
  114 |    while (top(auxiliar) != -1)
      |                         ^~
cc1.exe: all warnings being treated as errors
Compilation failed
265f65e
Sun, Mar 23, 2025  3:23:13 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
7460b6e
Sun, Mar 23, 2025  3:25:31 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
5c835ef
Sun, Mar 23, 2025 10:19:03 PM: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:18: error: initialization of 'Stack *' {aka 'List *'} from incompatible pointer type 'Stack * (*)()' {aka 'List * (*)()'} [-Werror=incompatible-pointer-types]
  132 |    Stack* Pila = create_stack;
      |                  ^~~~~~~~~~~~
exercises.c:142:18: error: 'pila' undeclared (first use in this function); did you mean 'Pila'?
  142 |          if (top(pila) == NULL)
      |                  ^~~~
      |                  Pila
exercises.c:142:18: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
6bf272b
Sun, Mar 23, 2025 10:25:29 PM: 
 exercises.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:18: error: initialization of 'Stack *' {aka 'List *'} from incompatible pointer type 'Stack * (*)()' {aka 'List * (*)()'} [-Werror=incompatible-pointer-types]
  132 |    Stack* Pila = create_stack;
      |                  ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
54f075c
Sun, Mar 23, 2025 10:27:28 PM: 
 exercises.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
 tests:  7|1
total_score: 60/70
7fcf7ac
Sun, Mar 23, 2025 10:42:03 PM: 
 exercises.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:140:27: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
  140 |          push(Pila, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected 'void *' but argument is of type 'char'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:146:27: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
  146 |          push(Pila, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected 'void *' but argument is of type 'char'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:159:1: error: control reaches end of non-void function [-Werror=return-type]
  159 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
ecdb139
Sun, Mar 23, 2025 10:43:34 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:140:27: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
  140 |          push(Pila, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected 'void *' but argument is of type 'char'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:146:27: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
  146 |          push(Pila, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected 'void *' but argument is of type 'char'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ae15cdd
Sun, Mar 23, 2025 10:48:00 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:140:27: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
  140 |          push(Pila, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected 'void *' but argument is of type 'char'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cf7bce9
